--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
     </div>
     <!-- Okej -->
 
+    <section>
+        tekst
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ipsum quas ut repudiandae blanditiis ipsam debitis, facere non atque distinctio tempora. Animi officiis est inventore modi id odit, nesciunt reprehenderit.
+    </section>
     <form>
         <fieldset>
             <legend>Twoje dane</legend>
