test name added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     </header>
     <p>
     <div class="container">
+        <p class="name">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore harum fugit ullam facere
+            mollitia! Veniam placeat aliquam animi obcaecati, quibusdam esse vero asperiores voluptates consectetur
+            laboriosam dolorem adipisci eveniet soluta!</p>
         <form class="form">
             <fieldset class="form__fieldset">
                 <legend class="form__legend">
@@ -61,7 +64,8 @@
 
     <section>
         tekst
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ipsum quas ut repudiandae blanditiis ipsam debitis, facere non atque distinctio tempora. Animi officiis est inventore modi id odit, nesciunt reprehenderit.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ipsum quas ut repudiandae blanditiis ipsam
+        debitis, facere non atque distinctio tempora. Animi officiis est inventore modi id odit, nesciunt reprehenderit.
     </section>
     <form>
         <fieldset>
