--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
         </header>
         <p>
         <div class="container">
-            <p class="name">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore harum fugit ullam facere
-                mollitia! Veniam placeat aliquam animi obcaecati, quibusdam esse vero asperiores voluptates consectetur
-                laboriosam dolorem adipisci eveniet soluta!</p>
+            <p class="name">bla bla bla będzie git</p>
             <form class="form">
                 <fieldset class="form__fieldset">
                     <legend class="form__legend">
