--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1 class="naglowek"> Robert Grzyb</h1>
             <h2 class="navigation">
                 <a class="link" href="#o-mnie">O mnie</a>
-                <a class="link" href="#lista-ogladanych-filmow">Lista oglądanych filmów</a>
+                <a class="link" href="#lista-ogladanych-filmow">Lista oglądanych i ulubionych filmów</a>
             </h2>
         </header>
         <p>
