--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </header>
         <p>
         <div class="container">
-            <p class="name">bla bla bla będzie git</p>
+            <p class="name"></p>
             <form class="form">
                 <fieldset class="form__fieldset">
                     <legend class="form__legend">
