--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 class="naglowek"> Robert Grzyb</h1>
             <h2 class="navigation">
                 <a class="link" href="#o-mnie">O mnie</a>
-                <a class="link" href="#lista-ogladanych-filmow">Lista oglądanych i ulubionych filmów</a>
+                <a class="link" href="#lista-ogladanych-filmow">Lista oglądanych i filmów</a>
             </h2>
         </header>
         <p>
@@ -62,31 +62,12 @@
                 </p>
             </form>
         </div>
-        <!-- Okej -->
-        <form>
-            <fieldset>
-                <legend>Twoje dane</legend>
-                <p>
-                    <label>Twój wzrost: <input class="js-height" type="number" min="1" step="any" value="168"></label>
-                </p>
-                <p>
-                    <label>Twoja waga: <input type="number" min="1" step="any"></label>
-                </p>
-            </fieldset>
-            <p>
-                <button>Policz BMI</button>
-            </p>
-        </form>
-        <p>
-            Twoje BMI wynosi: <strong></strong>
-        </p>
-
         <section>
-            <img class="songoSSJ"
+            <img class="songoSSJ js-songoSSJ"
                 src="https://data4.cupsell.pl/upload/generator/179656/640x420/3710006_print_1.png?resize=max_sizes&key=55f9a22768eed085006592c1174c0235"
                 alt="Songo SSJ">
             <p>
-                <button class="button">Usuń zdjęcie</button>
+                <button class="button js-button">Pokaż zdjęcie</button>
             </p>
             <h2 id="o-mnie" class="zawod">Technik logistyk</h2>
             </p>
@@ -104,7 +85,7 @@
         </section>
         <section id="lista-ogladanych-filmow">
             <table class="table">
-                <caption>Lista oglądanych filmów</caption>
+                <caption><strong>LISTA OGLĄDANYCH FILMÓW</strong></caption>
                 <tr class="tableRow">
                     <th class="tableCell tableHeader" scope="col">Imię</th>
                     <th class="tableCell tableHeader" scope="col">Tytuł filmu</th>
