deleted reduntant code

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/style.css" rel="stylesheet">
     <link href="css/element.css" rel="stylesheet">
-    <link href="css/article.css" rel="stylesheet">
     <link href="css/container.css" rel="stylesheet">
-    <link href="css/form.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
     <script defer src="js/script.js"></script>
@@ -32,51 +30,16 @@
                 <a class="link" href="#lista-ogladanych-filmow">Lista oglądanych i filmów</a>
             </h2>
         </header>
-        <p>
-        <div class="container">
-            <p class="name"></p>
-            <form class="form">
-                <fieldset class="form__fieldset">
-                    <legend class="form__legend">
-                        Dane osobowe
-                    </legend>
-                    <p>
-                        <label>
-                            <span class="form__labelText">
-                                Imię:
-                            </span>
-                            <input class="form__field" name="firstName" required>
-                        </label>
-                    </p>
-                    <p>
-                        <label>
-                            <span class="form__labelText">
-                                Nazwisko:
-                            </span>
-                            <input class="form__field" name="lastName" required>
-                        </label>
-                    </p>
-                </fieldset>
-                <p>
-                    <button class="form__buttonDane" type="reset">Wyślij!</button>
-                </p>
-            </form>
-        </div>
         <section>
-            <img class="songoSSJ js-songoSSJ"
-                src="https://data4.cupsell.pl/upload/generator/179656/640x420/3710006_print_1.png?resize=max_sizes&key=55f9a22768eed085006592c1174c0235"
-                alt="Songo SSJ">
-            <p>
-                <button class="button js-button">Pokaż zdjęcie</button>
-            </p>
+            <img class="selfie js-selfie" src="images/selfie.png" alt="Selfie">
+            <button class="button js-button">Ukryj zdjęcie</button>
             <h2 id="o-mnie" class="zawod">Technik logistyk</h2>
-            </p>
             <h3 class="tekst"> Siemka! Zawód wyuczony to technik logistyk, obecnie pracuje w stolarni, w międzyczasie
                 studiowałem informatykę zaocznie, jako że studia nie wniosły żadnych perspektyw do mojego życia, a
                 bardzo
                 lubię komputery, nowinki technologiczne oraz zawsze ciekawiło mnie, jak wyglądają strony internetowe "od
                 kuchni" - postanowiłem rozpocząć kurs frontend. Trzymajcie kciuki! </h3>
-            <img class="songoDuzy Hide"
+            <img class="songoDuzy hide"
                 src="https://www.wykop.pl/cdn/c3201142/comment_lZo3Fdsh97iWJISYJOOG2c5rz4O4XDNf.jpg" alt="Songo duży">
             <img class="songoMaly" src="https://sm.ign.com/ign_pl/screenshot/default/72a_mt87.jpg" alt="Songo mały">
             <p>
