selfie image  corrected

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </h2>
         </header>
         <section>
-            <img class="selfie js-selfie" src="images/selfie.png" alt="Selfie">
+            <img class="selfie js-selfie" src="images/selfie.jpg" alt="Selfie">
             <button class="button js-button">Ukryj zdjęcie</button>
             <h2 id="o-mnie" class="zawod">Technik logistyk</h2>
             <h3 class="tekst"> Siemka! Zawód wyuczony to technik logistyk, obecnie pracuje w stolarni, w międzyczasie
